# yourpod.ai

./: .gitignore  README.md  pyproject.toml
yourpod/: generate.py  main.py  sound.py  topic_content.py  utils.py
